--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 			<div class="input-group-prepend"><span class="input-group-text"><i class="fa fa-heart text-danger"></i></span></div>
 			<input type="text" id="referral_link" onclick="this.select();" value="https://tron100.site/?r=" class="form-control">
 		  </div>
-		  <p class="lead mt-1"><small><i class="fa fa-info-circle text-info mr-1"></i> Referral income is <u>instantly</u> sent to your tron wallet account.</small></p>
+		  <p class="lead mt-1"><small><i class="fa fa-info-circle text-info mr-1"></i> Referral income will be withdrawable.</small></p>
 
 		  <div class="card shadow-smm border-info animate_when_visible animate__pulse mb-3">
 			<div class="card-body p-3 pl-4 pb-2">
