--- a/index.html
+++ b/index.html
@@ -454,6 +454,7 @@
           
           <h4>When can you withdraw?</h4>
           <p class="lead mb-4">
+			<u>There is a 5,000 TRX maximum withdrawal limit so whales can't drain the contract fast.</u><br>
             <strong>You can withdraw anytime</strong> and it always happens instantly.
             There are no restrictions once the contract is officially launched.
             Keep in mind that a withdraw costs 5-10 TRX in transaction fees.
