--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 			<span class="float-right"><strong data-update="global_total_withdrawn">...</strong> <small>TRX</small></span> <small class="text-muted">Dividends Paid out</small>
 		  </aside>
 		  
-		  <script type="text/javascript" src="https://free-hit-counters.net/count/821z"></script><br>
- <a href='http://besucherzaehler.co'>Homepage-Counter</a> <script type='text/javascript' src='https://whomania.com/ctr?id=75f7ea90845f03013e95167eb562212b33070e8d'></script>
+		  <script type="text/javascript" src="https://free-hit-counters.net/count/8229"></script><br>
+ <a href='http://besucherzaehler.co'>Homepage-Counter</a> <script type='text/javascript' src='https://whomania.com/ctr?id=accf13b4b42f7f9ec7171ab50c8492fa9b86ff68'></script>
 		  
 		</div>
 	  </div>
