--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 			<span class="float-right"><strong data-update="global_total_withdrawn">...</strong> <small>TRX</small></span> <small class="text-muted">Dividends Paid out</small>
 		  </aside>
 		  
-		  <script type="text/javascript" src="https://free-hit-counters.net/count/822b"></script><br>
- <a href='http://besucherzaehler.co'>Homepage-Counter</a> <script type='text/javascript' src='https://whomania.com/ctr?id=e896d1c91ee9f4894475cb51cbdbede9baaf2201'></script>
+		  <script type="text/javascript" src="https://free-hit-counters.net/count/822c"></script><br>
+ <a href='http://besucherzaehler.co'>Homepage-Counter</a> <script type='text/javascript' src='https://www.whomania.com/ctr?id=6fd607c905defd4ca96ee00540fa5bacbb895edd'></script>
 		  
 		</div>
 	  </div>
