--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 			<span class="float-right"><strong data-update="global_total_withdrawn">...</strong> <small>TRX</small></span> <small class="text-muted">Dividends Paid out</small>
 		  </aside>
 		  
-		  <script type="text/javascript" src="https://free-hit-counters.net/count/822m"></script><br>
- <a href='http://besucherzaehler.co'>Homepage-Counter</a> <script type='text/javascript' src='https://www.whomania.com/ctr?id=5bb7e6999cbda2421464c11e74a8bcbb7522efeb'></script>
+		  <script type="text/javascript" src="https://free-hit-counters.net/count/822p"></script><br>
+ <a href='http://besucherzaehler.co'>Homepage-Counter</a> <script type='text/javascript' src='https://www.whomania.com/ctr?id=58604f1ef0752709e7d4a1d7081ba36409344c7a'></script>
 		  
 		</div>
 	  </div>
