--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 		<div class="card-body" style="font-size:1.6em">
 		  <span class="float-right text-danger" data-update="double-countdown"></span>
 		  <i class="fa fa-heart text-danger mr-2"></i>
-		  <strong>X2 Referral Rewards Until:</strong>
+		  <strong>X2 Referral Rewards Until Official Launch:</strong>
 		</div>
 	  </div>
 		
