--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
 	      
 		
 		<a href="https://tronscan.org/#/contract/TY5DLMmRm19ukxuhdn4vnhdWrgyUazGvgV/code" target="_blank" class="btn btn-outline-info float-right ml-4 mt-2"><i class="fa fa-check text-success mr-1"></i> Verified Contract</a>
-			<!--a href="https://startron.club/" target="_blank" class="btn btn-outline-info float-right ml-4 mt-2"><i class="fa fa-check text-success mr-1"></i> <font style="color:gold"> 100% Star<span style="color:gray"><i class="fa fa-star" aria-hidden="true"></i></span>Tron</font></a>
+			<!--a href="https://startron.club/" target="_blank" class="btn btn-outline-info float-right ml-4 mt-2"><i class="fa fa-check text-success mr-1"></i> <font style="color:gold"> 100% Star<span style="color:gray"><i class="fa fa-star" aria-hidden="true"></i></span>Tron</font></a-->
        
-     <a href="https://tronrich.club/" target="_blank" class="btn btn-outline-info float-right ml-4 mt-2"><i class="fa fa-check text-success mr-1"></i> <font style="color:gold">TronRich 30%</font></a>
+     <a href="http://ultratrx.club/" target="_blank" class="btn btn-outline-info float-right ml-4 mt-2"><i class="fa fa-check text-success mr-1"></i> <font style="color:gold">UltraTRX 200%</font></a>
 		
-		<a href="https://tron2go.biz/" target="_blank" class="btn btn-outline-info float-right ml-4 mt-2"><i class="fa fa-check text-success mr-1"></i> <font style="color:gold">Tron2Go +200%</font></a-->
+		<!--a href="https://tron2go.biz/" target="_blank" class="btn btn-outline-info float-right ml-4 mt-2"><i class="fa fa-check text-success mr-1"></i> <font style="color:gold">Tron2Go +200%</font></a-->
          <br>
         <strong style="color:#2bc2f2">Decentralized &amp; Secure Smart Contract Fund that gives you</strong> 
         <br> 
